[package]
name = "fintrackr"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.0"
serde_json = "1.0.125"
tui-textarea = "0.6.1"
serde = { version = "1.0.208", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tui = "0.19.0"
unicode-width = "0.1.13"
dialoguer = "0.11.0"
